kubernetes/apps/openeo/grappa-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: grappa
    namespace: openeo
spec:
    type: ClusterIP
    ports:
        - port: 8080
          targetPort: http
          protocol: TCP
    selector:
        app: grappa
